# pypeln

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  Untitled.ipynb  asyncio_task.m.html  benchmark.py  book.json  codecov.yml  conftest.py  docker-compose.yml  gendocs.sh  index.html  io.m.html  mkdocs.yml  objects.inv  pr.m.html  process.m.html  pyproject.toml  requirements.txt  requirments.txt  setup.old.py  setup.py  shared_array.py  shared_array_experiment.py  sitemap.xml  test.py  th.m.html  thread.m.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci_test.yml  run-tests.yml
advanced/: index.html
api/process/: index.html
api/sync/: index.html
api/task/: index.html
api/thread/: index.html
benchmarks/: client-async-as-completed.py  server.py  timed.sh
benchmarks/100_million_downloads/: client-async-as-completed.py  client-async-sem.py  client-pypeln-idiomatic.py  client-pypeln-io-2.py  client-pypeln-io.py  client-task-pool.py  server.py  timed.sh
docker/: python27.dockerfile  python36.dockerfile
docs/: advanced.md  index.md
docs/api/: process.md  sync.md  task.md  thread.md
docs/guide/: README.md
docs/pypeln/: index.html  io.m.html  pr.m.html  th.m.html
examples/: io_downloads.py  io_downloads_wrong.py  process_error.py
experiments/: ensure_future.py  exit_on_ctr_c.py  flat_map.py
pypeln/: __init__.py  async.py  async_utils.py  asyncio_task.py  config.py  interfaces.py  io.py  mp.py  pipe.py  pr.py  pr1.py  process.py  sync.py  task_pool.py  th.py  thread.py  utils.py  utils_async.py
pypeln.old/: utils.py
pypeln.old/process/: api.py  stage.py  utils.py
pypeln.old/sync/: api.py
pypeln.old/task/: api.py  stage.py  utils.py
pypeln.old/thread/: __init__.py  api.py  utils.py
pypeln/process/: __init__.py  api.py  api_old.py  old.py  queue.py  queue_process_test.py  queue_test.py  stage.py  supervisor.py  supervisor_process_test.py  supervisor_test.py  utils.py  worker.py  worker_process_test.py  worker_test.py
pypeln/sync/: __init__.py  api.py  api_old.py  old.py  stage.py  utils.py
pypeln/task/: __init__.py  api.py  api_old.py  old.py  queue.py  queue_task_test.py  stage.py  supervisor.py  supervisor_task_test.py  utils.py  worker.py  worker_task_test.py
pypeln/task_old/: api.py
pypeln/thread/: __init__.py  api.py  old.py  queue.py  (+7 more)
pypline/: __init__.py  async.py
scripts/: clean.sh  deploy-docs.sh  gendocs.sh  generate_docs.py  get-coverage.sh  get-size.sh  gh-pages.sh  merge-to-master.sh  mkdocs_template.yml  run-docs.sh  run-tests.sh  test-all-versions.sh  test-version.sh  tests-and-coverage.sh
search/: search_index.json
tests/: test_io.py  test_io_async.py  test_mixtures.py  test_old_task.py  test_old_thread.py  test_pr.py  test_process.py  test_sync.py  test_task.py  test_task_api.py  test_task_async.py  test_th.py  test_thread.py  test_thread_old_2.py  tst_task.py  tst_task_api.py  utils_io.py
(+172 files in other folders)
