
[tool.poetry]
name = "pypeln"
version = "0.4.4"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cgarciae/pypeln"
homepage = "https://cgarciae.github.io/pypeln"

[tool.poetry.dependencies]
python = "^3.6"
stopit = "^1.1.2"
typing_extensions = { version = "^3.7.4", markers = "python_version < '3.8'" }
dataclasses =  { version = "^0.7", markers = "python_version >= '3.6' and python_version < '3.7'" }

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
hypothesis = "^5.5.1"
cytoolz = "^0.10.1"
pytest-asyncio = "^0.10.0"
aiohttp = "^3.6.2"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.3"
pytest-sugar = "^0.9.2"
tqdm = "^4.43.0"
coverage = "^5.0.4"
black = {version = "^19.10b0", allow-prereleases = true}
mkautodoc = "^0.1.0"
mkdocstrings = { version = "^0.12.0", markers = "python_version >= '3.6'" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
