[tool.poetry]
name = "pypeln"
version = "0.4.8"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cgarciae/pypeln"
homepage = "https://cgarciae.github.io/pypeln"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
stopit = "^1.1.2"
typing_extensions = { version = "^3.7.4", python = "<3.8" }
dataclasses =  { version = "^0.7", python = ">=3.6,<3.7" }

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
hypothesis = "^5.5.1"
cytoolz = "^0.10.1"
pytest-asyncio = "^0.10.0"
aiohttp = "^3.6.2"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.3"
pytest-sugar = "^0.9.2"
tqdm = "^4.43.0"
coverage = "^5.0.4"
mkautodoc = "^0.1.0"
mkdocstrings = "^0.17.0"
debugpy = "^1.0.0-rc.2"
black = {version = "^20.8b1", allow-prereleases = true}
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
